unpackaged/main/default/objects/Off_site_agreement__c/Off_site_agreement__c.object-meta.xml
<CustomObject>
    <label>Off site agreement</label>
    <nameField>
        <displayFormat>OSA-{000000}</displayFormat>
        <label>Off-Site Agreement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Off site agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>