unpackaged/main/default/objects/Off_site_agreement__c/fields/Accepted_by_customer__c.field-meta.xml
<CustomField>
    <fullName>Accepted_by_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted by customer</label>
    <type>Checkbox</type>
</CustomField>