unpackaged/main/default/objects/Off_site_agreement__c/fields/Accepted_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted Email Sent</label>
    <type>Checkbox</type>
</CustomField>