unpackaged/main/default/objects/Off_site_agreement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Off site agreements</relationshipLabel>
    <relationshipName>Off_site_agreements</relationshipName>
    <type>Lookup</type>
</CustomField>