unpackaged/main/default/objects/Off_site_agreement__c/fields/Agent_name__c.field-meta.xml
<CustomField>
    <fullName>Agent_name__c</fullName>
    <label>Agent name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>