unpackaged/main/default/objects/Off_site_agreement__c/fields/Allocated_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allocated Engineer</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Off site agreements</relationshipLabel>
    <relationshipName>Off_site_agreements</relationshipName>
    <type>Lookup</type>
</CustomField>