unpackaged/main/default/objects/Off_site_agreement__c/fields/Allocated_Engineer_Email__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Engineer_Email__c</fullName>
    <label>Allocated Engineer Email</label>
    <type>Email</type>
</CustomField>