unpackaged/main/default/objects/Off_site_agreement__c/fields/Client_Sign_Off_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Client_Sign_Off_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Sign Off Email Sent</label>
    <type>Checkbox</type>
</CustomField>