unpackaged/main/default/objects/Off_site_agreement__c/fields/Collection_fee__c.field-meta.xml
<CustomField>
    <fullName>Collection_fee__c</fullName>
    <label>Collection fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>