unpackaged/main/default/objects/Off_site_agreement__c/fields/Collection_fee_pay_O1__c.field-meta.xml
<CustomField>
    <fullName>Collection_fee_pay_O1__c</fullName>
    <label>Collection fee pay O1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>