unpackaged/main/default/objects/Off_site_agreement__c/fields/Collection_fee_required__c.field-meta.xml
<CustomField>
    <fullName>Collection_fee_required__c</fullName>
    <description>Is a collection fee required - value should be either Yes or No</description>
    <inlineHelpText>Is a collection fee required - value should be either Yes or No</inlineHelpText>
    <label>Collection fee required</label>
    <length>20</length>
    <type>Text</type>
</CustomField>