unpackaged/main/default/objects/Off_site_agreement__c/fields/Combined_Customer_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Combined_Customer_Email_Addresses__c</fullName>
    <description>For merge template display purposes only</description>
    <formula>Customer_email__c &amp; &quot;;&quot; &amp;  Additional_Email__c</formula>
    <inlineHelpText>For merge template display purposes only</inlineHelpText>
    <label>Combined Customer Email Addresses</label>
    <type>Text</type>
</CustomField>