unpackaged/main/default/objects/Off_site_agreement__c/fields/Comms_Control_Estimate_Emails__c.field-meta.xml
<CustomField>
    <fullName>Comms_Control_Estimate_Emails__c</fullName>
    <formula>Account__r.Comms_Control_Estimate_Emails__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comms Control Estimate Emails</label>
    <type>Checkbox</type>
</CustomField>