unpackaged/main/default/objects/Off_site_agreement__c/fields/Created_Date_no_time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_no_time__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <label>Created Date - no time</label>
    <type>Date</type>
</CustomField>