unpackaged/main/default/objects/Off_site_agreement__c/fields/Customer_last_name__c.field-meta.xml
<CustomField>
    <fullName>Customer_last_name__c</fullName>
    <label>Customer last name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>