unpackaged/main/default/objects/Off_site_agreement__c/fields/Customer_signature__c.field-meta.xml
<CustomField>
    <fullName>Customer_signature__c</fullName>
    <label>Customer deposit signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>