unpackaged/main/default/objects/Off_site_agreement__c/fields/Date_Time_Ticked_Siclops_Stage_1__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Ticked_Siclops_Stage_1__c</fullName>
    <label>Date Time Ticked Siclops Stage 1</label>
    <type>DateTime</type>
</CustomField>