unpackaged/main/default/objects/Off_site_agreement__c/fields/Deposit_Received__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Received__c</fullName>
    <label>Deposit Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>