unpackaged/main/default/objects/Off_site_agreement__c/fields/Deposit_Required_Hex__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Required_Hex__c</fullName>
    <formula>CASE(FLOOR(MOD(Deposit_required__c/(16*16*16*16),16)),10,&quot;A&quot;,11,&quot;B&quot;,12,&quot;C&quot;,13,&quot;D&quot;,14,&quot;E&quot;,15,&quot;F&quot;,Text( FLOOR(MOD(Deposit_required__c/(16*16*16*16),16))))
&amp;
CASE(FLOOR(MOD(Deposit_required__c/(16*16*16),16)),10,&quot;A&quot;,11,&quot;B&quot;,12,&quot;C&quot;,13,&quot;D&quot;,14,&quot;E&quot;,15,&quot;F&quot;,Text( FLOOR(MOD(Deposit_required__c/(16*16*16),16))))
&amp;
CASE(FLOOR(MOD(Deposit_required__c/(16*16),16)),10,&quot;A&quot;,11,&quot;B&quot;,12,&quot;C&quot;,13,&quot;D&quot;,14,&quot;E&quot;,15,&quot;F&quot;,Text( FLOOR(MOD(Deposit_required__c/(16*16),16))))
&amp;
CASE(FLOOR(MOD(Deposit_required__c/16,16)),10,&quot;A&quot;,11,&quot;B&quot;,12,&quot;C&quot;,13,&quot;D&quot;,14,&quot;E&quot;,15,&quot;F&quot;,Text( FLOOR(MOD(Deposit_required__c/16,16))))
&amp;
CASE(FLOOR(MOD(Deposit_required__c,16)),10,&quot;A&quot;,11,&quot;B&quot;,12,&quot;C&quot;,13,&quot;D&quot;,14,&quot;E&quot;,15,&quot;F&quot;,Text(FLOOR(MOD(Deposit_required__c,16))))
&amp;
&quot;.&quot;
&amp;
CASE(FLOOR(mod((MOD(Deposit_required__c,1)*100)/16,16)),10,&quot;A&quot;,11,&quot;B&quot;,12,&quot;C&quot;,13,&quot;D&quot;,14,&quot;E&quot;,15,&quot;F&quot;,Text(FLOOR(mod((MOD(Deposit_required__c,1)*100)/16,16))))
&amp;
CASE(FLOOR(mod(MOD(Deposit_required__c,1)*100,16)),10,&quot;A&quot;,11,&quot;B&quot;,12,&quot;C&quot;,13,&quot;D&quot;,14,&quot;E&quot;,15,&quot;F&quot;,Text(FLOOR(mod(MOD(Deposit_required__c,1)*100,16))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Required Hex</label>
    <type>Text</type>
</CustomField>