unpackaged/main/default/objects/Off_site_agreement__c/fields/Description_of_works_to_carry_out__c.field-meta.xml
<CustomField>
    <fullName>Description_of_works_to_carry_out__c</fullName>
    <label>Description of works to carry out</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>