unpackaged/main/default/objects/Off_site_agreement__c/fields/Details_of_Scaffolding__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Scaffolding__c</fullName>
    <label>Details of Scaffolding</label>
    <type>TextArea</type>
</CustomField>