unpackaged/main/default/objects/Off_site_agreement__c/fields/Details_of_User_who_bypassed_deposit__c.field-meta.xml
<CustomField>
    <fullName>Details_of_User_who_bypassed_deposit__c</fullName>
    <label>Details of User who bypassed deposit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>