unpackaged/main/default/objects/Off_site_agreement__c/fields/Discount_offered__c.field-meta.xml
<CustomField>
    <fullName>Discount_offered__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Discount offered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>