unpackaged/main/default/objects/Off_site_agreement__c/fields/Final_Payment_Not_Taken_On_Site__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment_Not_Taken_On_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Payment Not Taken On Site</label>
    <type>Checkbox</type>
</CustomField>