unpackaged/main/default/objects/Off_site_agreement__c/fields/Final_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment_Received__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Final Payment Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>