unpackaged/main/default/objects/Off_site_agreement__c/fields/Final_Payment_Siclops_Ref__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment_Siclops_Ref__c</fullName>
    <label>Final Payment Siclops Ref</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>