unpackaged/main/default/objects/Off_site_agreement__c/fields/Finance_Check_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Finance_Check_Deposit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Check Deposit</label>
    <type>Checkbox</type>
</CustomField>