unpackaged/main/default/objects/Off_site_agreement__c/fields/Fixed_total_charge_excl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Fixed_total_charge_excl_VAT__c</fullName>
    <label>Fixed total charge excl. VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>