unpackaged/main/default/objects/Off_site_agreement__c/fields/Gas_supply_1__c.field-meta.xml
<CustomField>
    <fullName>Gas_supply_1__c</fullName>
    <label>Gas supply (1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>