unpackaged/main/default/objects/Off_site_agreement__c/fields/Lead_Fee__c.field-meta.xml
<CustomField>
    <fullName>Lead_Fee__c</fullName>
    <description>Does a Lead Fee apply?</description>
    <inlineHelpText>Does a Lead Fee apply?</inlineHelpText>
    <label>Lead Fee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>