unpackaged/main/default/objects/Off_site_agreement__c/fields/Material_pay_O1__c.field-meta.xml
<CustomField>
    <fullName>Material_pay_O1__c</fullName>
    <label>Material pay O1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>