unpackaged/main/default/objects/Off_site_agreement__c/fields/Materials_collection_pt_Name_Address__c.field-meta.xml
<CustomField>
    <fullName>Materials_collection_pt_Name_Address__c</fullName>
    <label>Materials collection pt Name &amp; Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>