unpackaged/main/default/objects/Off_site_agreement__c/fields/Materials_supplied_by_Operative_details__c.field-meta.xml
<CustomField>
    <fullName>Materials_supplied_by_Operative_details__c</fullName>
    <label>Materials supplied by Operative details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>