unpackaged/main/default/objects/Off_site_agreement__c/fields/Off_Site_Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>Off_Site_Agreement_Number__c</fullName>
    <description>Just the number portion of the Off Site Agreement Name field e.g. just 123 of &#39;OSA-123&#39;.</description>
    <formula>VALUE(MID(Name,FIND(&#39;-&#39;, Name)+1,(LEN(Name)-FIND(&#39;-&#39;, Name))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Just the number portion of the Off Site Agreement Name field e.g. just 123 of &#39;OSA-123&#39;.</inlineHelpText>
    <label>Off Site Agreement Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>