unpackaged/main/default/objects/Off_site_agreement__c/fields/OFFSA_Deposit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>OFFSA_Deposit_Date_Time__c</fullName>
    <description>The date and time the deposit was received</description>
    <inlineHelpText>The date and time the deposit was received</inlineHelpText>
    <label>OFFSA Deposit Date/Time</label>
    <type>DateTime</type>
</CustomField>