unpackaged/main/default/objects/Off_site_agreement__c/fields/OFFSA_Final_Balance_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>OFFSA_Final_Balance_Date_Time__c</fullName>
    <description>The Date/Time the Final Balance was taken.</description>
    <inlineHelpText>The Date/Time the Final Balance was taken.</inlineHelpText>
    <label>OFFSA Final Balance Date/Time</label>
    <type>DateTime</type>
</CustomField>