unpackaged/main/default/objects/Off_site_agreement__c/fields/Operative_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Operative_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Operative Email Sent</label>
    <type>Checkbox</type>
</CustomField>