unpackaged/main/default/objects/Off_site_agreement__c/fields/Preferred_arrival_timeslot__c.field-meta.xml
<CustomField>
    <fullName>Preferred_arrival_timeslot__c</fullName>
    <label>Preferred arrival timeslot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>