unpackaged/main/default/objects/Off_site_agreement__c/fields/Preferred_date__c.field-meta.xml
<CustomField>
    <fullName>Preferred_date__c</fullName>
    <label>Preferred date</label>
    <type>Date</type>
</CustomField>