unpackaged/main/default/objects/Off_site_agreement__c/fields/Preferred_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Date_Time__c</fullName>
    <description>Preferred Date with first hour of Preferred Arrival Time Slot</description>
    <formula>DATETIMEVALUE(TEXT(Preferred_date__c) &amp; &quot; &quot; &amp; LEFT(Preferred_arrival_timeslot__c,5)&amp;&quot;:00&quot; ) 

/*-0.041666667*/</formula>
    <inlineHelpText>Preferred Date with first hour of Preferred Arrival Time Slot</inlineHelpText>
    <label>Preferred Date/Time</label>
    <type>DateTime</type>
</CustomField>