unpackaged/main/default/objects/Off_site_agreement__c/fields/Previous_Allocated_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Previous_Allocated_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The allocated Engineer before it was changed</description>
    <inlineHelpText>The allocated Engineer before it was changed</inlineHelpText>
    <label>Previous Allocated Engineer</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Off site agreements (Previous Allocated Engineer)</relationshipLabel>
    <relationshipName>Off_site_agreements_Previous_Allocated</relationshipName>
    <type>Lookup</type>
</CustomField>