unpackaged/main/default/objects/Off_site_agreement__c/fields/Previous_Allocated_Engineer_Email__c.field-meta.xml
<CustomField>
    <fullName>Previous_Allocated_Engineer_Email__c</fullName>
    <label>Previous Allocated Engineer Email</label>
    <type>Email</type>
</CustomField>