unpackaged/main/default/objects/Off_site_agreement__c/fields/Property_Address_County__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_County__c</fullName>
    <label>Property Address County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>