unpackaged/main/default/objects/Off_site_agreement__c/fields/Property_Address_line_1__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_line_1__c</fullName>
    <label>Property Address line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>