unpackaged/main/default/objects/Off_site_agreement__c/fields/Property_Address_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_Postcode__c</fullName>
    <label>Property Address Postcode</label>
    <length>8</length>
    <type>Text</type>
</CustomField>