unpackaged/main/default/objects/Off_site_agreement__c/fields/Property_Address_Town_City__c.field-meta.xml
<CustomField>
    <fullName>Property_Address_Town_City__c</fullName>
    <label>Property Address Town/City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>