unpackaged/main/default/objects/Off_site_agreement__c/fields/Raised_by_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Raised_by_Engineer__c</fullName>
    <label>Raised by (Engineer)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>