unpackaged/main/default/objects/Off_site_agreement__c/fields/Scaffolding_Cost__c.field-meta.xml
<CustomField>
    <fullName>Scaffolding_Cost__c</fullName>
    <label>Scaffolding Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>