unpackaged/main/default/objects/Off_site_agreement__c/fields/Schedule_confirmed__c.field-meta.xml
<CustomField>
    <fullName>Schedule_confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule confirmed</label>
    <type>Checkbox</type>
</CustomField>